@@ -1,0 +1,1 @@
+$!mytool.star("foo")
